2021-06-30  Andrew Burgess  <andrew.burgess@embecosm.com>

	PR gdb/27830
	* infrun.c (restart_threads): Threads that are already executing
	in the target are already resumed.

2021-06-30  Andrew Burgess  <andrew.burgess@embecosm.com>

	PR gdb/27830
	* infrun.c (displaced_step_finish): Disable thread events.
	(do_target_resume): Enable thread events when stepping.
	(finish_step_over): Disable thread events.

2021-05-29  Andrew Burgess  <andrew.burgess@embecosm.com>

	* frame.c (get_prev_frame_id_by_id): Delete.
	* frame.h (get_prev_frame_id_by_id): Delete declaration.
	* valops.c (value_assign): Use VALUE_NEXT_FRAME_ID and
	get_prev_frame_always, not VALUE_FRAME_ID.
	* value.c (value_fetch_lazy_register): Likewise.
	* value.h (VALUE_FRAME_ID): Delete.

2021-05-29  Andrew Burgess  <andrew.burgess@embecosm.com>

	* frame.c (get_prev_frame_if_no_cycle): Always return prev_frame
	when computing the frame_id for an INLINE_FRAME.  Add an extra
	assertion.

2021-07-06  Tom de Vries  <tdevries@suse.de>

	* dwarf2/read.c (scan_partial_symbols): Skip top-level imports of
	c++ CU.
	* testsuite/gdb.dwarf2/imported-unit-bp.exp: Moved to ...
	* testsuite/gdb.dwarf2/imported-unit-bp.exp.tcl: ... here.
	* testsuite/gdb.dwarf2/imported-unit-bp-c++.exp: New test.
	* testsuite/gdb.dwarf2/imported-unit-bp-c.exp: New test.
	* testsuite/gdb.dwarf2/imported-unit.exp: Update.

2021-07-03  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Create a new section for the next release branch.
	Rename the section of the current branch, now that it has
	been cut.

2021-07-03  Joel Brobecker  <brobecker@adacore.com>

	GDB 11 branch created (4b51505e33441c6165e7789fa2b6d21930242927):
	* version.in: Bump version to 12.0.50.DATE-git.

2021-07-03  Tom Tromey  <tom@tromey.com>

	* dwarf2/read.c (lnp_state_machine::record_line): Use 'true'.
	(dwarf_decode_lines): Remove '=='.

2021-07-02  Tom Tromey  <tromey@adacore.com>

	* ada-exp.y (chop_selector, chop_separator, write_selectors)