@@ -1,3 +1,8 @@
+2020-07-14  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* Makefile.in (stamp-version): Add remote-repository file as a
+	dependency.
+
 2021-06-30  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	PR gdb/27830
